RouteLogic-v4.0.0/force-app/main/default/objects/Case/fields/AI_Intent__c.field-meta.xml
<CustomField>
    <fullName>AI_Intent__c</fullName>
    <label>AI Intent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>