RouteLogic-v4.0.0/force-app/main/default/objects/Case/fields/AI_Last_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Last_Analysis__c</fullName>
    <label>AI Last Analysis</label>
    <type>DateTime</type>
</CustomField>