RouteLogic-v4.0.0/force-app/main/default/objects/Case/fields/AI_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Processing_Status__c</fullName>
    <label>AI Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Processed</fullName>
                <default>true</default>
                <label>Not Processed</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>