RouteLogic-v4.0.0/force-app/main/default/objects/Case/fields/AI_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>AI_Sentiment__c</fullName>
    <label>AI Sentiment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>