RouteLogic-v4.0.0/force-app/main/default/objects/Case/fields/AI_Suggested_Response__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggested_Response__c</fullName>
    <label>AI Suggested Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>